--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 		<h1 style="font-size:4em; font-weight:900">펭교의 惡</h1>
 		<p style="font-size:1.3em; font-weight:700; margin-top: 30px; color: gray;">교주님을 잡아먹고 알을 깨먹는 등</p>
 		<p style="font-size:1.3em; font-weight:700; margin-top:0px; color: gray;">교주님들을 위협하는 사악한 악의 덩어리들 </p>
-		<p style="font-size:1.2em; font-weight:500; margin-top:18px; color:darkgrey;">*마우스를 올려 범죄자 정보 보기</p>
+		<p style="font-size:1.2em; font-weight:500; margin-top:18px; color:darkgrey;">*이름에 마우스를 올려 범죄자 정보 보기</p>
 	</div>
 
 	
